# nondeterministic-woodlands

./: .gitignore  README.md  _quarto.yml  about.qmd  bibliography.bib  giscus.html  index.qmd  nondeterministic-woodlands.Rproj  pyproject.toml
_freeze/posts/2022-04-postgis-and-r/index/execute-results/: html.json
_freeze/posts/2022-04-rendering-drm-models/index/execute-results/: html.json
_freeze/posts/2022-05-spatial-databases/index/execute-results/: html.json
_freeze/posts/2022-06-pandas-tidyverse-basic/index/execute-results/: html.json
_freeze/posts/post-with-code/index/execute-results/: html.json
_site/: about.html  index.html  listings.json  robots.txt  search.json  sitemap.xml
_site/posts/2022-04-rendering-drm-models/: index.html
_site/posts/2022-05-spatial-databases/: index.html
_site/posts/2022-06-pandas-tidyverse-basic/: index.html
_site/posts/2023-04-17-stratified-cv-pyspark/: index.html
_site/posts/post-with-code/: index.html
_site/site_libs/bootstrap/: bootstrap.min.css
posts/: _metadata.yml
posts/2022-04-rendering-drm-models/: example.gv  impact.gv  index.qmd  reference.gv
posts/2022-05-spatial-databases/: index.qmd
posts/2022-05-spatial-databases/shp/: moscow_raw_subset.dbf  moscow_raw_subset.shp  moscow_raw_subset.shx
posts/2022-05-spatial-databases/tif/: 15_leskova_dtm.tif
posts/2022-06-pandas-tidyverse-basic/: games-first15.csv  index.qmd  out.csv
posts/2023-04-17-stratified-cv-pyspark/: index.ipynb
posts/post-with-code/: index.qmd
