[tool.poetry]
name = "nondeterministic-woodlands"
version = "0.1.0"
description = ""
authors = ["Ivan Dubrovin <ivan.dubrovin@proton.me>"]
readme = "README.md"
packages = [{include = "nondeterministic_woodlands"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
